# anamnesis-pl

./: .gitignore  DEPLOY-STAMP  README.md  pyproject.toml
anamnesis/: config.py
anamnesis/analysis/: fast_lda.py  feature_map.py  t3_investigation.py
anamnesis/extraction/: cache_surgery.py  feature_pipeline.py  generation_runner.py  model_loader.py  raw_saver.py  replay_cached.py  replay_extract.py  replay_manifest.py  state_extractor.py  state_extractor_reference.py  streaming_generate.py
anamnesis/modes/: __init__.py  extended_modes.py  prompt_swap.py  run3_original_modes.py  run4_modes.py
anamnesis/prompts/: prompt_sets.json  prompt_sets_narrative.json
anamnesis/scripts/: _a5_common.py  _gpu.py  _persistent_workers.py  _single_cell_guard.py  a8_build_corpus.py  a8_collect_states.py  a8_dsv2_curverows.py  a8_fit_g.py  a8_leg2_diagnostics.py  a8_leg3_build_vectors.py  a8_leg3_score.py  a8_leg4_composition.py  a8_leg4_coupling.py  a8_leg4_s5_corpus.py  a8_leg4_termination.py  a8_leg4_transitivity.py  a8_leg4_whitened_needle.py  a8_leg4f_banks.py  a8_leg4f_owl_readout.py  a8_leg4f_owl_state_column.py  a8_leg4g_readout.py  a8_leg6_l4c_letter.py  a8_leg6_l4c_sigma_beside.py  a8_leg6_modepair_audit.py  a8_leg6_star.py  (+210 more)
docs/: liveness-audit.md  refactor-plan.md  vllm-requirements.md
tests/: bench_extraction_parallel.py  test_cache_surgery_turnkeep.py  test_dsv2_moe_pipeline.py  test_extraction_equivalence.py  test_lean_loading.py  test_multicell_bitwise.py  test_persistent_workers.py  test_rope_theta_14e.py  test_single_cell_guard.py  test_tool_fixes_2026_07_18.py
(+142 files in other folders)
