[project]
name = "anamnesis"
version = "0.1.0"
description = "Extraction and analysis pipeline for transformer computational state signatures"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Luxia"},
]

dependencies = [
    "torch>=2.1",
    "transformers>=4.36",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "pydantic>=2.0",
]

[project.optional-dependencies]
geometry = [
    "dadapy>=0.3",
    "scikit-dimension>=0.3",
]
all = [
    "anamnesis[geometry]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anamnesis"]
